--- a/composer.json
+++ b/composer.json
@@ -2,5 +2,8 @@
     "require-dev": {
         "phpunit/phpunit": "^8",
         "phing/phing": "2.*"
+    },
+    "require": {
+        "phpunit/php-code-coverage": "^7.0"
     }
 }
